[project]
name = "all-or-nothing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "black>=26.3.1",
    "faker>=40.19.1",
    "fastapi>=0.136.1",
    "mypy>=1.20.2",
    "numpy>=2.4.6",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "uv>=0.11.8",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
[tool.black]
target-version = ["py312"]
